--- a/HTML/Novo Projeto/main.css
+++ b/HTML/Novo Projeto/main.css
@@ -1,24 +1,50 @@
 
+
 *{
-font-size: 25px;
-}
 
-h2{
     color: red;
-}
+ }
 
-h1{
-    color: blue;    
+p {
+    color: #ff3cff;
 }
 
 .proxo{
-    color: purple;
-}
 
-#fonte{
-    font-size: 50px;
+    color:purple;
 }
 
 .fontemaior{
-    font-size: 100px;
+
+    font-size:100px;
+}
+
+
+#bfont{
+
+    font-size:40px;
+}
+
+
+img{
+
+    width:100px;
+    height: 100px;
+    border: 5px solid #ff3cff;
+    border-radius: 100%;
+}
+
+.contentor{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    height: 300px;
+    background-color:red;
+}
+
+button{
+
+    margin-top: 15px;
 }
