--- a/Programador de Informática/ASP NET MVC/01_Adivinhas/Views/Adivinhas/Edit.cshtml
+++ b/Programador de Informática/ASP NET MVC/01_Adivinhas/Views/Adivinhas/Edit.cshtml
@@ -1,16 +1,22 @@
 ﻿@model _01_Adivinhas.Models.Adivinhas
 
 @{
-    ViewData["Title"] = "Adicionar adivinha";
+    ViewData["Title"] = "Editar";
 }
 
-<h2>Adicone aqui um novo desafio</h2>
+<h2>Editar</h2>
 
+<h4>Adivinhas</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="Edit">
+            @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="id" class="control-label"></label>
+                <input asp-for="id" class="form-control" />
+                <span asp-validation-for="id" class="text-danger"></span>
+            </div>*@
             <div class="form-group">
                 <label asp-for="pergunta" class="control-label"></label>
                 <input asp-for="pergunta" class="form-control" />
@@ -22,14 +28,14 @@
                 <span asp-validation-for="resposta" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-success" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Voltar</a>
+    <a asp-action="Index">Voltar ao início</a>
 </div>
 
 @section Scripts {
