--- a/Programador de Informática/ASP NET MVC/01_Adivinhas/Views/Adivinhas/Index.cshtml
+++ b/Programador de Informática/ASP NET MVC/01_Adivinhas/Views/Adivinhas/Index.cshtml
@@ -4,10 +4,11 @@
     ViewData["Title"] = "Adivinhas";
 }
 
-<h2>Lista de Adivinhas</h2>
+<h3>Aqui encontra todas as adivinhas </h3>
+<h6>Caso saiba alguma outra, por favor adicione na nossa lista</h6>
 
 <p>
-    <a asp-action="Create">Criar Nova</a>
+    <a asp-action="Create">Inserir nova</a>
 </p>
 <table class="table">
     <thead>
@@ -25,23 +26,25 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.pergunta)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.resposta)
-            </td>
-            <td>
-                @Html.ActionLink("Editar", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Detalhes", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.pergunta)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.resposta)
+                </td>
+                <td>
+                    @Html.ActionLink("Editar", "Edit", new {id=item.id}, htmlAttributes: new {@class = "btn btn-primary"}) |
+                    @Html.ActionLink("Detalhes", "Details", new { id=item.id}, htmlAttributes: new { @class = "btn btn-info" }) |
+                    @*@Html.ActionLink("Delete", "Delete", new { / id=item.PrimaryKey / })*@
+                    <button id="@item.id" class="btn btn-danger" onclick="Eliminar(this)">Eliminar</button>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
