--- a/Programador de Informática/ASP NET MVC/01_Adivinhas/Views/Anedotas/Create.cshtml
+++ b/Programador de Informática/ASP NET MVC/01_Adivinhas/Views/Anedotas/Create.cshtml
@@ -1,29 +1,23 @@
 ﻿@model _01_Adivinhas.Models.Anedotas
 
 @{
-    ViewData["Title"] = "Criar nova anedota";
+    ViewData["Title"] = "Adicionar adivinha";
 }
 
-
-<h2>Criar nova anedota</h2>
+<h2>Adicone aqui uma nova piada</h2>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @*<div class="form-group">
-                <label asp-for="id" class="control-label"></label>
-                <input asp-for="id" class="form-control" />
-                <span asp-validation-for="id" class="text-danger"></span>
-            </div>*@
             <div class="form-group">
                 <label asp-for="anedota" class="control-label"></label>
                 <input asp-for="anedota" class="form-control" />
                 <span asp-validation-for="anedota" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
+                <input type="submit" value="Adicionar" class="btn btn-primary" />
             </div>
         </form>
     </div>
