--- a/Programador de Informática/ASP NET MVC/01_Adivinhas/Views/Anedotas/Index.cshtml
+++ b/Programador de Informática/ASP NET MVC/01_Adivinhas/Views/Anedotas/Index.cshtml
@@ -1,13 +1,14 @@
 ﻿@model IEnumerable<_01_Adivinhas.Models.Anedotas>
 
 @{
-    ViewData["Title"] = "Anedotas";
+    ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h3>Aqui encontra todas as anedotas </h3>
+<h6>Caso saiba alguma outra, por favor adicione na nossa lista</h6>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Inserir nova</a>
 </p>
 <table class="table">
     <thead>
@@ -18,9 +19,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.anedota)
             </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.resposta)
-            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -33,9 +31,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.anedota)
             </td>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.resposta)
-            </td>*@
+
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
