--- a/Programador de Informática/ASP NET MVC/01_Adivinhas/Views/Home/Privacy.cshtml
+++ b/Programador de Informática/ASP NET MVC/01_Adivinhas/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Política de Privacidade";
+    ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use esta página para descrever a política de privacidade do seu site.</p>
+<p>Use this page to detail your site's privacy policy.</p>
